@@ -156,13 +156,15 @@ jags <- function( data, inits,
                   n.adapt  = 0,
                   quiet = quiet )
   
-  # Adds adaptation, just in case...
-  adapt(m,n.iter=n.adapt,progress.bar=progress.bar,quiet=quiet,end.adaptation=TRUE)
+  # Adds adaptation. This never needs to be verbose, so force
+  # 'progress.bar' to 'none' and 'quiet' to TRUE, irrespective of what the
+  # global values for these options are in the function
+  adapt(m,n.iter=n.adapt,progress.bar="none",quiet=TRUE,end.adaptation=TRUE)
 
   # Updates the model for the burning phase
   .update.jags(   
     m,
-    n.iter=n.burnin,
+    n.iter=max(n.burnin,(n.iter/2)),
     n.thin=n.thin,
     by=refresh,
     progress.bar=progress.bar
